recude-cost responsivity

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             </div>
 
             <div class="col-12 col-xl-5">
-                <h1 class="w-100 brand-darker-text bigger text-center text-xl-end pb-3" style="">
+                <h1 class="w-100 brand-darker-text bigger text-center text-xl-end pb-3">
                     Por que a <span class="brand-text">Imagenio?</span>
                 </h1>
             </div>
@@ -312,32 +312,42 @@
                     em nuvem
                 </h2>
 
-                <p class="w-100 mx-auto primary-text fw-500 bigger pt-2 text-center" style="max-width: 359px;">
+                <p class="w-100 mx-auto secondary-text fw-500 bigger pt-2 text-center" style="max-width: 359px;">
                     Compartilhamento de exames em diversos formatos: PDF, E-
                     mail, SMS e Fax, garantindo mais praticidade e eficiência.
                 </p>
+
+                <div class="d-flex d-xl-none align-items-center justify-content-center gap-3 pt-3">
+                    <button class="custom-btn rounded-btn btn-text brand-bg px-4">
+                        Planos e Preços
+                    </button>
+    
+                    <button class="custom-btn rounded-btn btn-text brand-darker-bg px-4">
+                        Teste Grátis
+                    </button>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- ===================================================== -->
 
-    <section class="container pt-4" id="reduce-cost">
+    <section class="container reduce-cost pt-4" id="reduce-cost">
         <div class="row pt-5">
-            <div class="col-7">
-                <h1 class="brand-darker-text pb-3 w-100" style="max-width: 610px; min-width: 610px;">
+            <div class="col-12 col-xl-7">
+                <h1 class="brand-darker-text text-center text-xl-start pb-3 w-100">
                     <span class="brand-text">Reduza Custos</span> 
                     Preservando o Meio <br>
                     Ambiente
                 </h1>
             </div>
-            <div class="col-5 d-flex align-items-center justify-content-center">
+            <div class="col-12 col-xl-5 d-flex align-items-center justify-content-center">
                 <div>
-                    <h3 class="primary-text smaller pt-2" style="max-width: 490px;">
+                    <h3 class="primary-text smaller image-h3 text-center text-xl-start pt-2" style="max-width: 490px;">
                         Imagem digital e sustentável: a Imagenio elimina o uso de CDs e filmes radiológicos, reduzindo custos operacionais e contribuindo para um planeta mais verde.
                     </h3>
         
-                    <div class="d-flex align-items-center justify-content-start gap-4 pt-4">
+                    <div class="d-none d-xl-flex align-items-center justify-content-start gap-4 pt-4">
                         <button class="custom-btn rounded-btn btn-text brand-bg px-4">
                             Planos e Preços
                         </button>
@@ -364,7 +374,7 @@
                             Simplicidade na Transferência de Exames
                         </h3>
 
-                        <p class="secondary-text">
+                        <p class="secondary-text bigger">
                             Compartilhe exames com médicos e pacientes direto na nuvem, sem complicações.
                         </p>
                     </div>
@@ -376,7 +386,7 @@
                             Acessibilidade e Armazenamento Seguro
                         </h3>
 
-                        <p class="secondary-text">
+                        <p class="secondary-text bigger">
                             Exames armazenados na nuvem, com criptografia e em conformidade com a LGPD. Acesse de qualquer dispositivo.
                         </p>
                     </div>
@@ -388,7 +398,7 @@
                             Diversos Métodos de Compartilhamento de Exames
                         </h3>
 
-                        <p class="secondary-text">
+                        <p class="secondary-text bigger">
                             Compartilhe exames por PDF, e-mail, SMS ou fax — a solução ideal para médicos, pacientes e instituições.
                         </p>
                     </div>
@@ -400,7 +410,7 @@
                             Simplicidade na Transferência de Exames
                         </h3>
 
-                        <p class="secondary-text">
+                        <p class="secondary-text bigger">
                             Compartilhe exames com médicos e pacientes direto na nuvem, sem complicações.
                         </p>
                     </div>
@@ -412,7 +422,7 @@
                             Acessibilidade e Armazenamento Seguro
                         </h3>
 
-                        <p class="secondary-text">
+                        <p class="secondary-text bigger">
                             Exames armazenados na nuvem, com criptografia e em conformidade com a LGPD. Acesse de qualquer dispositivo.
                         </p>
                     </div>
@@ -424,7 +434,7 @@
                             Diversos Métodos de Compartilhamento de Exames
                         </h3>
 
-                        <p class="secondary-text">
+                        <p class="secondary-text bigger">
                             Compartilhe exames por PDF, e-mail, SMS ou fax — a solução ideal para médicos, pacientes e instituições.
                         </p>
                     </div>
