--- a/index.html
+++ b/index.html
@@ -571,18 +571,18 @@
 
     <!-- ===================================================== -->
 
-    <section class="container pt-5" id="faq">
-        <div class="row pt-5">
+    <section class="container pt-5 pt-xl-5" id="faq">
+        <div class="row pt-0 pt-xl-5">
             <div class="col pt-4">
                 <h1 class="brand-darker-text text-center w-100 smaller">
-                    Perguntas Frequentes <span class="brand-text">FAQ</span>
+                    Perguntas Frequentes <br class="d-xl-none"><span class="brand-text">FAQ</span>
                 </h1>
             </div>
         </div>
 
         <div class="row pt-4">
-            <div class="col-4 d-flex flex-column gap-3">
-                <div class="big-square-card faq-card-padding light-bg">
+            <div class="col-12 col-xl-4 d-flex flex-row flex-xl-column gap-3">
+                <div class="w-100 big-square-card faq-card-padding light-bg mobile-faq-card-padding">
                     <div class="d-flex align-items-center justify-content-start gap-2 gap-xxl-4 pb-3">
                         <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
 
@@ -597,7 +597,7 @@
                     </p>
                 </div>
 
-                <div class="big-square-card faq-card-padding light-bg">
+                <div class="w-100 big-square-card faq-card-padding light-bg mobile-faq-card-padding">
                     <div class="d-flex align-items-center justify-content-start gap-2 gap-xxl-4 pb-3">
                         <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
 
@@ -612,7 +612,7 @@
                     </p>
                 </div>
 
-                <div class="big-square-card faq-card-padding light-bg">
+                <div class="w-100 big-square-card faq-card-padding light-bg d-none d-xl-block">
                     <div class="d-flex align-items-center justify-content-start gap-2 gap-xxl-4 pb-3">
                         <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
 
@@ -627,7 +627,7 @@
                     </p>
                 </div>
 
-                <div class="big-square-card faq-card-padding brand-bg">
+                <div class="w-100 big-square-card faq-card-padding brand-bg d-none d-xl-block">
                     <div class="d-flex align-items-center justify-content-start gap-2 gap-xxl-4 pb-3">
                         <img src="img/svg/white-uprising-arrow.svg" alt="Seta" class="arrow">
 
@@ -645,7 +645,7 @@
                 </div>
             </div>
 
-            <div class="col-8">
+            <div class="col-12 col-xl-8 pt-4 pt-xl-0">
                 <div class="big-square-card faq-big-card-padding light-bg">
                     <div class="d-flex align-items-start justify-content-start gap-3 pb-4">
                         <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
@@ -768,6 +768,25 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="d-block d-xl-none col-12 pt-4">
+                <div class="w-100 big-square-card faq-card-padding brand-bg">
+                    <div class="d-flex align-items-center justify-content-start gap-2 gap-xxl-4 pb-3">
+                        <img src="img/svg/white-uprising-arrow.svg" alt="Seta" class="arrow">
+
+                        <div class="ps-2">
+                            <h4 class="light-text bigger m-0">
+                                Ainda tem dúvidas?
+                            </h4>
+                            <p class="light-text bigger m-0" style="line-height: 16px !important;">Explore agora todas as dúvidas mais comuns</p>
+                        </div>
+                    </div>
+
+                    <p class="light-text bigger">
+                        Veja como a nossa plataforma pode otimizar sua operação com nossa solução.
+                    </p>
                 </div>
             </div>
         </div>
