finish brute responsivity

--- a/index.html
+++ b/index.html
@@ -796,12 +796,38 @@
 
     <footer class="container pt-5">
         <div class="row pt-5">
-            <nav class="col-12 d-flex align-items-center justify-content-between">
-                <button class="no-bg-btn p-0">
-                    <img src="img/svg/logo.svg" alt="Logo Imagenio" class="logo">
-                </button>
+            <nav class="col-12 d-flex flex-column flex-lg-row align-items-center justify-content-between">
+                <div class="d-flex align-items-center justify-content-between w-100">
+                    <button class="no-bg-btn p-0">
+                        <img src="img/svg/logo.svg" alt="Logo Imagenio" class="logo">
+                    </button>
 
-                <ul class="d-flex align-items-center justify-content-end gap-4">
+                    <ul class="d-flex d-lg-none align-items-center justify-content-end gap-2">
+                        <li>
+                            <a href="https://www.instagram.com" target="_blank">
+                                <button class="square-btn social-media-btn custom-btn brand-darker-bg">
+                                    <img src="img/svg/instagram.svg" alt="Instagram">
+                                </button>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com" target="_blank">
+                                <button class="square-btn social-media-btn custom-btn brand-darker-bg">
+                                    <img src="img/svg/linkedin.svg" alt="linkedin">
+                                </button>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com" target="_blank">
+                                <button class="square-btn social-media-btn custom-btn brand-darker-bg">
+                                    <img src="img/svg/youtube.svg" alt="youtube">
+                                </button>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <ul class="pt-3 pt-lg-0 w-100 d-flex align-items-center justify-content-center justify-content-lg-end gap-1 gap-sm-2 gap-lg-4">
                     <li>
                         <a class="brand-darker-text">Políticas de Privacidade</a>
                     </li>
@@ -822,11 +848,11 @@
             </div>
 
             <div class="col-12 d-flex align-items-center justify-content-between pb-5">
-                <p class="brand-darker-text fw-600">
+                <p class="brand-darker-text text-center text-lg-start bigger fw-600">
                     © 2026 copyright Imagenio. Todos os direitos reservados.
                 </p>
 
-                <ul class="d-flex align-items-center justify-content-end gap-2">
+                <ul class="d-none d-lg-flex align-items-center justify-content-end gap-2">
                     <li>
                         <a href="https://www.instagram.com" target="_blank">
                             <button class="square-btn social-media-btn custom-btn brand-darker-bg">
