--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-    <header class="">
+<body class="fade-in">
+    <header>
         <div class="container">
             <div class="row">
                 <nav class="col d-flex align-items-center justify-content-between">
@@ -24,7 +24,7 @@
                         <img src="img/svg/logo.svg" alt="Logo Imagenio" class="logo">
                     </button>
 
-                    <button class="custom-btn rounded-btn bigger-btn-text brand-darker-bg px-xl-5 py-xl-4">
+                    <button onclick="openModal('modal-send-info')" class="custom-btn rounded-btn bigger-btn-text brand-darker-bg px-xl-5 py-xl-4">
                         Teste Grátis
                     </button>
                 </nav>
@@ -56,6 +56,7 @@
                     </button>
 
                     <button 
+                      onclick="openModal('modal-youtube-video')"
                       class="
                         custom-btn rounded-btn btn-text brand-secondary-bg 
                         d-flex align-items-center justify-content-center
@@ -163,6 +164,7 @@
                     </button>
 
                     <button 
+                      onclick="openModal('modal-youtube-video')"
                       class="
                         custom-btn rounded-btn btn-text brand-secondary-bg 
                         d-flex align-items-center justify-content-center
@@ -322,7 +324,7 @@
                         Planos e Preços
                     </button>
     
-                    <button class="custom-btn rounded-btn btn-text brand-darker-bg px-4">
+                    <button onclick="openModal('modal-send-info')" class="custom-btn rounded-btn btn-text brand-darker-bg px-4">
                         Teste Grátis
                     </button>
                 </div>
@@ -352,7 +354,7 @@
                             Planos e Preços
                         </button>
         
-                        <button class="custom-btn rounded-btn btn-text brand-darker-bg px-4">
+                        <button onclick="openModal('modal-send-info')" class="custom-btn rounded-btn btn-text brand-darker-bg px-4">
                             Teste Grátis
                         </button>
                     </div>
@@ -363,7 +365,7 @@
         <div class="row">
             <div class="col d-flex align-items-center justify-content-between">
                 <button data-carroussel-btn-backward class="no-bg-btn pe-0 pe-xxl-3" title="Anterior">
-                    <img src="img/svg/arrow-back.svg" alt="Anterior" class="d-block">
+                    <img src="img/svg/arrow-back.svg" alt="Anterior" class="d-block arrow-btn">
                 </button>
 
                 <div class="py-5 custom-carroussel-container w-100">
@@ -441,7 +443,7 @@
                 </div>
 
                 <button data-carroussel-btn-forward class="no-bg-btn ps-0 ps-xxl-3" title="Próximo">
-                    <img src="img/svg/arrow-next.svg" alt="Próximo" class="d-block">
+                    <img src="img/svg/arrow-next.svg" alt="Próximo" class="d-block arrow-btn">
                 </button>
             </div>
         </div>
@@ -834,10 +836,10 @@
                     <li>
                         <a class="brand-darker-text">Políticas de Uso</a>
                     </li>
-                    <li>
+                    <li onclick="scrollToElement('#faq')">
                         <a class="brand-darker-text">FAQ</a>
                     </li>
-                    <li>
+                    <li onclick="openModal('modal-youtube-video')">
                         <a class="brand-darker-text">Como Funciona</a>
                     </li>
                 </ul>
@@ -878,6 +880,238 @@
             </div>
         </div>
     </footer>
+
+    <!-- ===================================================== -->
+    <!-- ===================================================== -->
+    <!-- MODAL -->
+
+    <div class="d-none backdrop-modal fade-in">
+        <!-- ===================================================== -->
+        <!-- ===================================================== -->
+        <!-- SEND INFO FORM -->
+        <div data-modal-send-info class="d-none modal-container-div">
+            <div class="w-100 card-fold light-bg">
+                <div class="card-top-container">
+                    <img src="img/svg/light-folder-card-connection.svg" class="folder-card-connection" alt="folder-card-connection" width="46px" height="20px">
+                    <div class="card-top-bar light-bg" style="transform: translateY(1px);"></div>
+                </div>
+
+                <div class="p-4 pe-3 pt-2">
+                    <div class="w-100 d-flex justify-content-between align-items-center pb-4">
+                        <h3 class="mid brand-darker-text m-0">
+                            Dados para contato
+                        </h3>
+
+                        <button
+                          onclick="closeModal('modal-send-info')"
+                          class="d-none d-sm-block no-bg-btn" 
+                          title="Fechar" 
+                          style="transform: translate(0, -15px);"
+                          >
+                            <img src="img/svg/close-modal.svg" alt="Fechar" width="26px">
+                        </button>
+                    </div>
+
+                    <form class="m-0 p-0" id="send-info">
+                        <div class="w-100 d-flex flex-column flex-md-row gap-md-3">
+                            <div class="w-100">
+                                <div class="input-container">
+                                    <input 
+                                      class="custom-input" 
+                                      type="text"
+                                      placeholder="Nome" 
+                                      id="name" name="name" 
+                                      required/>
+                                    <img src="img/svg/error.svg" alt="Erro" class="error-svg">
+                                </div>
+                                <div class="error-message" id="error-name">
+                                    Este campo deve ser preenchido
+                                </div>
+                            </div>
+
+                            <div class="w-100">
+                                <div class="input-container">
+                                    <input 
+                                      class="custom-input" 
+                                      type="email"
+                                      placeholder="E-mail" 
+                                      id="email" name="email" 
+                                      required/>
+                                    <img src="img/svg/error.svg" alt="Erro" class="error-svg">
+                                </div>
+                                <div class="error-message" id="error-email">
+                                    Este campo deve ser preenchido
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="w-100 d-flex flex-column flex-md-row gap-md-3">
+                            <div class="w-100">
+                                <div class="input-container">
+                                    <input 
+                                      class="custom-input" 
+                                      type="text"
+                                      placeholder="Empresa" 
+                                      id="companyName" name="companyName" 
+                                      required/>
+                                    <img src="img/svg/error.svg" alt="Erro" class="error-svg">
+                                </div>
+                                <div class="error-message" id="error-companyName">
+                                    Este campo deve ser preenchido
+                                </div>
+                            </div>
+
+                            <div class="w-100">
+                                <div class="input-container">
+                                    <input 
+                                      class="custom-input" 
+                                      type="text"
+                                      placeholder="Site" 
+                                      id="website" name="website" 
+                                      required/>
+                                    <img src="img/svg/error.svg" alt="Erro" class="error-svg">
+                                </div>
+                                <div class="error-message" id="error-website">
+                                    Este campo deve ser preenchido
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="w-100 d-flex flex-column flex-md-row gap-md-3">
+                            <div class="w-100">
+                                <div class="input-container">
+                                    <input 
+                                      class="custom-input" 
+                                      type="tel"
+                                      placeholder="Telefone" 
+                                      id="phone" name="phone" 
+                                      required/>
+                                    <img src="img/svg/error.svg" alt="Erro" class="error-svg">
+                                </div>
+                                <div class="error-message" id="error-phone">
+                                    Telefone inválido
+                                </div>
+                            </div>
+
+                            <div class="w-100"></div>
+                        </div>
+
+                        <div class="input-container">
+                            <div class="w-100">
+                                <textarea 
+                                  class="custom-input"
+                                  placeholder="Mensagem (obrigatório)"
+                                  name="message" id="message"
+                                  style="min-height: 115px;"
+                                  required></textarea>
+                                <div class="error-message" id="error-message">
+                                    Este campo deve ser preenchido
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="d-flex align-items-center justify-content-center gap-4 pt-4">
+                            <button 
+                              type="button" 
+                              onclick="closeModal('modal-send-info')"
+                              class="w-100 custom-btn rounded-btn btn-text brand-bg px-3">
+                                Cancelar
+                            </button>
+
+                            <button 
+                              type="submit" 
+                              id="submitFormButton"
+                              class="w-100 custom-btn rounded-btn btn-text brand-darker-bg px-3"
+                              disabled>
+                                Enviar
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <!-- ===================================================== -->
+        <!-- ===================================================== -->
+        <!-- CONFIRMATION -->
+        <div data-modal-confirmation class="d-none modal-container-div" style="max-width: 700px;">
+            <div class="w-100 card-fold brand-bg">
+                <div class="card-top-container">
+                    <img src="img/svg/brand-folder-card-connection.svg" class="folder-card-connection" alt="folder-card-connection" width="46px" height="20px">
+                    <div class="card-top-bar brand-bg" style="transform: translateY(1px);"></div>
+                </div>
+
+                <div class="p-4 pe-3 pt-2 pb-0">
+                    <div class="d-flex align-items-center gap-5">
+                        <img src="img/confirmation.png" alt="Confirmação" class="w-100 d-none d-md-block" style="max-width: 272px;">
+
+                        <div>
+                            <div class="w-100 d-flex justify-content-end align-items-center pb-4">
+                                <img src="img/svg/white-logo.svg" alt="Logo" width="198px" style="transform: translate(0, -15px);">
+                            </div>
+
+                            <h2 class="bigger light-text mb-4 pb-1">
+                                ESTAMOS<br class="d-none d-md-block">
+                                QUASE LÁ!
+                            </h2>
+
+                            <h4 class="light-text bigger fw-500 mb-3 pb-3">
+                                Nossa equipe entrará em contato em breve para ativar seu teste gratuito e garantir que você tenha a melhor experiência possível.
+                            </h4>
+
+                            <div class="w-100 d-flex justify-content-end align-items-center pb-4">
+                                <button 
+                                  type="button" 
+                                  onclick="closeModal('modal-confirmation')"
+                                  class="custom-btn rounded-btn btn-text light-bg brand-text px-3">
+                                    Ok
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- ===================================================== -->
+        <!-- ===================================================== -->
+        <!-- YOUTUBE VIDEO -->
+        <div data-modal-youtube-video class="d-none modal-container-div">
+            <div class="w-100 card-fold light-bg">
+                <div class="card-top-container">
+                    <img src="img/svg/light-folder-card-connection.svg" class="folder-card-connection" alt="folder-card-connection" width="46px" height="20px">
+                    <div class="card-top-bar light-bg" style="transform: translateY(1px);"></div>
+                </div>
+
+                <div class="p-4 pe-3 pt-2">
+                    <div class="w-100 d-flex justify-content-between align-items-center pb-4">
+                        <h3 class="mid brand-darker-text m-0">
+                            Dados para contato
+                        </h3>
+
+                        <button
+                          onclick="closeModal('modal-send-info')"
+                          class="d-none d-sm-block no-bg-btn" 
+                          title="Fechar" 
+                          style="transform: translate(0, -15px);"
+                          >
+                            <img src="img/svg/close-modal.svg" alt="Fechar" width="26px">
+                        </button>
+                    </div>
+
+                    <div class="video-container">
+                        <iframe
+                            src="https://www.youtube.com/embed/u31qwQUeGuM?si=JVSRYHjncKWrVhva"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen
+                        ></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <style>
         .custom-input::placeholder {
