integration brevo API

--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
                 <div class="separator brand-darker-bg"></div>
             </div>
 
-            <div class="col-12 d-flex align-items-center justify-content-between pb-5">
+            <div class="col-12 d-flex align-items-center justify-content-between pb-3 pb-md-5">
                 <p class="brand-darker-text text-center text-lg-start bigger fw-600 w-100">
                     © 2026 copyright Imagenio. Todos os direitos reservados.
                 </p>
@@ -902,16 +902,17 @@
                     <div class="card-top-bar light-bg"></div>
                 </div>
 
-                <div class="send-info-content p-4 pe-3 pt-2">
+                <div class="send-info-content pb-4 pt-2 px-2 px-md-3">
                     <div class="w-100 d-flex justify-content-between align-items-center pb-4">
                         <h3 class="mid brand-darker-text m-0">
                             Dados para contato
                         </h3>
 
                         <button
-                          class="d-block no-bg-btn ps-3 btn-close-modal-form"
+                          class="d-block no-bg-btn btn-close-modal-form"
                           onclick="closeSendInfoModal('')"
-                          title="Fechar" 
+                          title="Fechar"
+                          style="transform: translateY(-18px);"
                           >
                             <img src="img/svg/close-modal.svg" alt="Fechar" width="20px">
                         </button>
@@ -1109,6 +1110,7 @@
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen
+                            class="rounded-3"
                         ></iframe>
                     </div>
                 </div>
