--- a/index.html
+++ b/index.html
@@ -950,6 +950,7 @@
                                     <img src="img/svg/error.svg" alt="Erro" class="error-svg">
                                 </div>
                                 <div class="error-message" id="error-email">
+                                    placehold
                                 </div>
                             </div>
                         </div>
