--- a/index.html
+++ b/index.html
@@ -616,8 +616,8 @@
                             <img src="img/svg/arrow-back.svg" alt="Anterior" class="d-block">
                         </button>
         
-                        <div class="py-4 custom-carroussel-transform-container w-100">
-                            <div class="carroussel-card light-bg big-square-card transform-card">
+                        <div class="py-4 d-flex custom-carroussel-transform-container w-100">
+                            <div class="order-1 order-md-0 carroussel-card light-bg big-square-card transform-card">
                                 <img src="img/svg/essencial.svg" alt="icon" width="38px" class="pb-4">
 
                                 <h3 class="plus-jakarta darker-text p-0 mb-1 smaller fw-600">
@@ -657,15 +657,15 @@
                                     </li>
                                 </ul>
 
-                                <button class="mensal plus-jakarta fw-700 rounded-btn custom-btn brand-darker-bg mx-auto mt-2">
+                                <button class="mensal plus-jakarta fw-700 rounded-btn cursor-normal brand-darker-bg mx-auto mt-2">
                                     R$ 299,00
                                 </button>
-                                <button class="anual plus-jakarta fw-700 rounded-btn custom-btn brand-darker-bg mx-auto mt-2">
+                                <button class="anual plus-jakarta fw-700 rounded-btn cursor-normal brand-darker-bg mx-auto mt-2">
                                     R$ 249,00
                                 </button>
                             </div>
                             
-                            <div class="carroussel-card plus-card light-bg big-square-card transform-card">
+                            <div class="order-0 order-md-1 carroussel-card plus-card light-bg big-square-card transform-card">
                                 <div class="w-100 d-flex align-items-center justify-content-between gap-3 gap-md-5 gap-lg-4 pb-4">
                                     <img src="img/svg/plus.svg" alt="icon" width="41px">
 
@@ -711,15 +711,15 @@
                                     </li>
                                 </ul>
 
-                                <button class="mensal plus-jakarta fw-700 rounded-btn custom-btn brand-bg mx-auto mt-2">
+                                <button class="mensal plus-jakarta fw-700 rounded-btn cursor-normal brand-bg mx-auto mt-2">
                                     R$ 697,50
                                 </button>
-                                <button class="anual plus-jakarta fw-700 rounded-btn custom-btn brand-bg mx-auto mt-2">
+                                <button class="anual plus-jakarta fw-700 rounded-btn cursor-normal brand-bg mx-auto mt-2">
                                     R$ 587,50
                                 </button>
                             </div>
 
-                            <div class="carroussel-card light-bg big-square-card transform-card">
+                            <div class="order-2 carroussel-card light-bg big-square-card transform-card">
                                 <img src="img/svg/pro.svg" alt="icon" width="45px" class="pb-4">
 
                                 <h3 class="plus-jakarta darker-text p-0 mb-1 smaller fw-600">
@@ -759,15 +759,15 @@
                                     </li>
                                 </ul>
 
-                                <button class="mensal plus-jakarta fw-700 rounded-btn custom-btn brand-darker-bg mx-auto mt-2">
+                                <button class="mensal plus-jakarta fw-700 rounded-btn cursor-normal brand-darker-bg mx-auto mt-2">
                                     R$ 1.325,00
                                 </button>
-                                <button class="anual plus-jakarta fw-700 rounded-btn custom-btn brand-darker-bg mx-auto mt-2">
+                                <button class="anual plus-jakarta fw-700 rounded-btn cursor-normal brand-darker-bg mx-auto mt-2">
                                     R$ 1.100,00
                                 </button>
                             </div>
 
-                            <div class="carroussel-card light-bg big-square-card transform-card">
+                            <div class="order-3 carroussel-card light-bg big-square-card transform-card">
                                 <img src="img/svg/premium.svg" alt="icon" width="36px" class="pb-4 pt-1">
 
                                 <h3 class="plus-jakarta darker-text p-0 mb-1 smaller fw-600">
@@ -781,11 +781,7 @@
                                 <div class="separator mt-2 mb-3" style="background-color: #E8EAF1; min-height: 1px;"></div>
 
                                 <ul class="p-0 pb-4 m-0 d-flex flex-column gap-3 align-items-start justify-content-start">
-                                    <li class="mensal p-0 m-0 d-flex align-items-center justify-content-start gap-2">
-                                        <img src="img/svg/circle.svg" alt="circle" width="15px">
-                                        <h5 class="m-0 plus-jakarta secondary-text">1000 créditos</h5>
-                                    </li>
-                                    <li class="anual p-0 m-0 d-flex align-items-center justify-content-start gap-2">
+                                    <li class="p-0 m-0 d-flex align-items-center justify-content-start gap-2">
                                         <img src="img/svg/circle.svg" alt="circle" width="15px">
                                         <h5 class="m-0 plus-jakarta secondary-text">1000 créditos / mês</h5>
                                     </li>
@@ -807,10 +803,10 @@
                                     </li>
                                 </ul>
 
-                                <button class="mensal plus-jakarta fw-700 rounded-btn custom-btn brand-darker-bg mx-auto mt-2">
+                                <button class="mensal plus-jakarta fw-700 rounded-btn cursor-normal brand-darker-bg mx-auto mt-2">
                                     R$ 2.090,00
                                 </button>
-                                <button class="anual plus-jakarta fw-700 rounded-btn custom-btn brand-darker-bg mx-auto mt-2">
+                                <button class="anual plus-jakarta fw-700 rounded-btn cursor-normal brand-darker-bg mx-auto mt-2">
                                     R$ 1.100,00
                                 </button>
                             </div>
