--- a/index.html
+++ b/index.html
@@ -616,8 +616,8 @@
                             <img src="img/svg/arrow-back.svg" alt="Anterior" class="d-block">
                         </button>
         
-                        <div class="py-4 d-flex custom-carroussel-transform-container w-100">
-                            <div class="order-1 order-md-0 carroussel-card light-bg big-square-card transform-card">
+                        <div class="py-4 custom-carroussel-transform-container w-100">
+                            <div class="carroussel-card light-bg big-square-card transform-card">
                                 <img src="img/svg/essencial.svg" alt="icon" width="38px" class="pb-4">
 
                                 <h3 class="plus-jakarta darker-text p-0 mb-1 smaller fw-600">
@@ -665,7 +665,7 @@
                                 </button>
                             </div>
                             
-                            <div class="order-0 order-md-1 carroussel-card plus-card light-bg big-square-card transform-card">
+                            <div class="carroussel-card plus-card light-bg big-square-card transform-card">
                                 <div class="w-100 d-flex align-items-center justify-content-between gap-3 gap-md-5 gap-lg-4 pb-4">
                                     <img src="img/svg/plus.svg" alt="icon" width="41px">
 
@@ -719,7 +719,7 @@
                                 </button>
                             </div>
 
-                            <div class="order-2 carroussel-card light-bg big-square-card transform-card">
+                            <div class="carroussel-card light-bg big-square-card transform-card">
                                 <img src="img/svg/pro.svg" alt="icon" width="45px" class="pb-4">
 
                                 <h3 class="plus-jakarta darker-text p-0 mb-1 smaller fw-600">
@@ -767,7 +767,7 @@
                                 </button>
                             </div>
 
-                            <div class="order-3 carroussel-card light-bg big-square-card transform-card">
+                            <div class="carroussel-card light-bg big-square-card transform-card">
                                 <img src="img/svg/premium.svg" alt="icon" width="36px" class="pb-4 pt-1">
 
                                 <h3 class="plus-jakarta darker-text p-0 mb-1 smaller fw-600">
